<resources>
    <string name="app_name">ShopApp</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button">Log in</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="create_an_account_label">Create an account</string>
    <string name="names_hint">Names</string>
    <string name="last_names_hint">Last names</string>
    <string name="conf_password_hint">Confirm password</string>
    <string name="log_in_error">Something went wrong</string>
    <string name="error__empty_name">We need your username to continue</string>
    <string name="error__empty_email">We need your email to continue</string>
    <string name="error__empty_password">You need a password to continue</string>
    <string name="error__passwords_not_match">Your passwords do not match</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="welcome">Welcome</string>
    <string name="username_hint">Username</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="create_your_account">Create your account</string>
    <string name="password_requirement_one">Passwords match</string>
    <string name="password_requirement_two">At least 8 characters</string>
    <string name="password_requirement_three">Passwords match</string>
    <string name="products">Products</string>
    <string name="cart">Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="add_products_to_your_cart">Add products to your cart</string>
    <string name="delete">Delete</string>
    <string name="added_to_cart">Product added to cart</string>
    <string name="cart_error">Error adding to cart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="order_completed">Order completed</string>
</resources>